// Trades Directory — ERD source for dbdiagram.io
//
// Paste the whole file into https://dbdiagram.io to get an editable diagram,
// then Export as PNG or PDF.
//
// This mirrors schema.sql. If you change one, change the other.

Table trade {
  id      integer [pk, increment]
  name_en text    [not null, unique]
  name_ar text    [not null, unique]
}

Table shop {
  id                  integer [pk, increment]
  name_ar             text    [not null]
  name_en             text
  commercial_register text    [unique, note: 'null for informal tradesmen']
  bank_account        text
  technical_capacity  text
}

Table branch {
  id           integer     [pk, increment]
  shop_id      integer     [not null, ref: > shop.id]
  address      text        [not null]
  branch_name  text
  phone_number varchar(15) [not null, note: 'CHECK ^\\+?[0-9]{7,15}$']
}

Table employee {
  id           integer     [pk, increment]
  branch_id    integer     [not null, ref: > branch.id]
  name_ar      text        [not null]
  name_en      text
  national_id  text        [unique, note: 'CHECK ^[0-9]{14}$']
  phone_number varchar(15) [not null, note: 'CHECK ^\\+?[0-9]{7,15}$']
}

Table shop_trade {
  shop_id  integer [ref: > shop.id]
  trade_id integer [ref: > trade.id]

  indexes {
    (shop_id, trade_id) [pk]
  }
  note: 'Junction table. Lets one shop work in several trades.'
}
